# imap-filter

./: .gitignore  CLAUDE.md  Cargo.toml  README  README.md  config.example.toml  config.toml
src/: ai_logger.rs  config.rs  email.rs  filter.rs  imap_client.rs  logging.rs  main.rs
