[package]
name = "imap_filter"
version = "0.0.1"
authors = ["Stephen Eilert <contact@stepheneilert.com>"]
edition = "2024"

[dependencies]
clap = "2.33"
imap = "2.4.1"
native-tls = "0.2"
regex = "1.5"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tempfile = "3.2"

[[bin]]
name = "imap_filter"
test = false
bench = false
