[package]
name = "imap_filter"
version = "0.0.1"
authors = ["Stephen Eilert <contact@stepheneilert.com>"]
edition = "2024"
description = "An email organizer that automatically filters and moves newsletter emails"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.33"
env_logger = "0.9"
imap = "2.4"
log = "0.4"
native-tls = "0.2"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tempfile = "3.3"
serde_json = "1.0"
indicatif = "0.17.0"
console = "0.15.0"

[lib]
name = "email_organizer"
path = "src/lib.rs"

[[bin]]
name = "email-organizer"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.3"
